--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="visually-hidden" hidden>УВАГА ДО ДЕТАЛЕЙ</h2>
         <div class="container">
           <ul class="detail-list list header-all">
-            <li class="detail-items">
+            <li class="detail-items icon-antena">
               <h3 class="detail-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="detail-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -66,7 +66,7 @@
               </p>
             </li>
 
-            <li class="detail-items">
+            <li class="detail-items icon-clock">
               <h3 class="detail-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="detail-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -74,14 +74,14 @@
               </p>
             </li>
 
-            <li class="detail-items">
+            <li class="detail-items icon-diagram">
               <h3 class="detail-title">ПЛАНУВАННЯ</h3>
               <p class="detail-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
-            <li class="detail-items">
+            <li class="detail-items icon-astronavt">
               <h3 class="detail-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="detail-text">
                 Значимість цих проблем настільки очевидна, що реалізація
