--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
         </nav>
         <ul class="auth-nav list">
           <li class="head">
+            <svg class="icon-nav">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
             <a class="auth-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="head">
+            <svg class="icon-nav">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
             <a class="auth-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -54,11 +60,16 @@
         <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
       <!-- УВАГА ДО ДЕТАЛЕЙ section -->
-      <section class="section-detail section">
+      <section class="section">
         <h2 class="visually-hidden" hidden>УВАГА ДО ДЕТАЛЕЙ</h2>
         <div class="container">
-          <ul class="detail-list list header-all">
-            <li class="detail-items icon-antena">
+          <ul class="list detail-section">
+            <li class="detail-items">
+              <div class="icon-box">
+                <svg class="icon-detail">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="detail-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="detail-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -66,7 +77,12 @@
               </p>
             </li>
 
-            <li class="detail-items icon-clock">
+            <li class="detail-items">
+              <div class="icon-box">
+                <svg class="icon-detail">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="detail-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="detail-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -74,14 +90,24 @@
               </p>
             </li>
 
-            <li class="detail-items icon-diagram">
+            <li class="detail-items">
+              <div class="icon-box">
+                <svg class="icon-detail">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="detail-title">ПЛАНУВАННЯ</h3>
               <p class="detail-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
-            <li class="detail-items icon-astronavt">
+            <li class="detail-items">
+              <div class="icon-box">
+                <svg class="icon-detail">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="detail-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="detail-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -137,6 +163,34 @@
               />
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-text">Product Designer</p>
+              <div class="social-box">
+                <ul class="list social">
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
@@ -148,6 +202,34 @@
               />
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-text">Frontend Developer</p>
+              <div>
+                <ul class="list social">
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
@@ -159,6 +241,34 @@
               />
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-text">Marketing</p>
+              <div>
+                <ul class="list social">
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
@@ -170,6 +280,34 @@
               />
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-text">UI Designer</p>
+              <div>
+                <ul class="list social">
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                  <li>
+                    <svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    <a href=""></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -196,5 +334,8 @@
         </address>
       </div>
     </footer>
+    <!-- <svg>
+        <use href="./images/icons.svg#icon-clock"></use>
+      </svg> -->
   </body>
 </html>
