--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <!-- Body -->
   <body class="portfolio-page">
     <!-- Header -->
-    <header class="header-page line">
+    <header class="header-page">
       <div class="container header-all">
         <nav class="nav-all">
           <a class="logo" href="">Web<span>Studio</span></a>
@@ -39,11 +39,17 @@
         </nav>
         <ul class="auth-nav list">
           <li class="head">
+            <svg class="icon-nav">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
             <a class="auth-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="head">
+            <svg class="icon-nav">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
             <a class="auth-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
