--- a/index.html
+++ b/index.html
@@ -319,6 +319,39 @@
         <a class="logo footer-logo" href=""
           >Web<span class="studio">Studio</span></a
         >
+        <div class="footer-social">
+          <h2 class="footer-title">приєднуйтесь</h2>
+          <ul class="list footer-item">
+            <li>
+              <a href="">
+                <svg class="icon-social">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg class="icon-social">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg class="icon-social">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg class="icon-social">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
         <address class="adress">
           <p class="adress-text">м. Київ, пр-т Лесі Українки, 26</p>
           <ul class="auth-nav list pad">
