--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <!-- Body -->
   <body class="portfolio-page">
     <!-- Header -->
-    <header class="header-page">
+    <header class="header-page line">
       <div class="container header-all">
         <nav class="nav-all">
           <a class="logo" href="">Web<span>Studio</span></a>
