--- a/index.html
+++ b/index.html
@@ -137,29 +137,25 @@
             <p class="team-text">Product Designer</p>
             <div class="social-box">
               <ul class="list social">
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -169,31 +165,27 @@
             <img class="team-img" src="./images/img-4-2.jpg" alt="Ольга Рєпіна" width="270" />
             <h3 class="team-name">Ольга Рєпіна</h3>
             <p class="team-text">Frontend Developer</p>
-            <div>
+            <div class="social-box">
               <ul class="list social">
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -203,31 +195,27 @@
             <img class="team-img" src="./images/img-5-2.jpg" alt="Микола Тарасов" width="270" />
             <h3 class="team-name">Микола Тарасов</h3>
             <p class="team-text">Marketing</p>
-            <div>
+            <div class="social-box">
               <ul class="list social">
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -237,31 +225,27 @@
             <img class="team-img" src="./images/img-6-2.jpg" alt="Михайло Єрмаков" width="270" />
             <h3 class="team-name">Михайло Єрмаков</h3>
             <p class="team-text">UI Designer</p>
-            <div>
+            <div class="social-box">
               <ul class="list social">
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
                 </li>
-                <li>
-                  <svg class="icon-social">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                  <a href=""></a>
+                <li class="team-social-items">
+                  <a class="social-team" href=""><svg class="icon-social">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
                 </li>
               </ul>
             </div>
@@ -271,9 +255,8 @@
     </section>
 
     <!-- Section client -->
-
-    <div class="container">
-      <section class="section">
+    <section class="section">
+      <div class="container">
         <h2 class="team-title">Постійні клієнти</h2>
         <ul class="client-list list">
           <li class="client-items">
@@ -307,16 +290,16 @@
               </svg></a>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
 
   <!-- footer -->
 
   <footer class="footer">
-    <div class="container">
-      <a class="logo footer-logo" href="">Web<span class="studio">Studio</span></a>
-      <div class="footer-adress">
+    <div class="container footer-adress">
+      <div>
+        <a class="logo footer-logo" href="">Web<span class="studio">Studio</span></a>
         <address class="adress">
           <p class="adress-text">м. Київ, пр-т Лесі Українки, 26</p>
           <ul class="auth-nav list pad">
@@ -330,34 +313,33 @@
         </address>
       </div>
       <!-- Footer-social -->
-
       <div class="footer-social">
-        <stroke class="footer-title">приєднуйтесь</stroke>
+        <p class="footer-title">приєднуйтесь</p>
         <ul class="social-list list">
           <li class="social-item">
-            <a class="social-link" class="" href="">
-              <svg class="icon-social">
+            <a class="social-link" href="">
+              <svg class="icon-social social-color">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a class="social-link" href="">
-              <svg class="icon-social">
+              <svg class="icon-social social-color">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a class="social-link" href="">
-              <svg class="icon-social">
+              <svg class="icon-social social-color">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
             <a class="social-link" href="">
-              <svg class="icon-social">
+              <svg class="icon-social social-color">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
