--- a/portfolio.html
+++ b/portfolio.html
@@ -170,19 +170,55 @@
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
-      <a class="logo footer-logo" href="">Web<span class="studio">Studio</span></a>
-      <address class="adress">
-        <p class="adress-text">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="auth-nav list pad">
-          <li class="nav-item">
-            <a class="auth-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <div class="container footer-adress">
+      <div>
+        <a class="logo footer-logo" href="">Web<span class="studio">Studio</span></a>
+        <address class="adress">
+          <p class="adress-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="auth-nav list pad">
+            <li class="nav-item">
+              <a class="auth-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="auth-link" href="tel:+380961111111">+380961111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <!-- Footer-social -->
+      <div class="footer-social">
+        <p class="footer-title">приєднуйтесь</p>
+        <ul class="social-list list">
+          <li class="social-item">
+            <a class="social-link" href="">
+              <svg class="icon-social social-color">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a class="auth-link" href="tel:+380961111111">+380961111111</a>
+          <li class="social-item">
+            <a class="social-link" href="">
+              <svg class="icon-social social-color">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="">
+              <svg class="icon-social social-color">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="">
+              <svg class="icon-social social-color">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
