--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,12 @@
       </nav>
       <ul class="auth-nav list">
         <li class="head">
-          <a class="auth-link" href="mailto:info@devstudio.com"><svg class="icon-nav">
+          <a class="auth-link" href="mailto:info@devstudio.com"><svg class="icon-nav" width="16px" height="12px">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
         <li class="head">
-          <a class="auth-link" href="tel:+380961111111"><svg class="icon-nav">
+          <a class="auth-link" href="tel:+380961111111"><svg class="icon-nav" width="10px" height="16px">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-2-2.jpg" alt="баскетболісти" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">
@@ -95,7 +95,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-3-2.jpg" alt="логотип" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-4-2.jpg" alt="навушники" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Проєкт Prime</h2>
@@ -115,7 +115,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-5-2.jpg" alt="коробочки" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -125,7 +125,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-6-2.jpg" alt="веб-сайт" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -135,7 +135,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-7-2.jpg" alt="книга" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -145,7 +145,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-8-2.jpg" alt="логотип" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Проєкт LAB</h2>
@@ -155,7 +155,7 @@
             </a>
           </li>
           <li class="portfolio-items">
-            <a href="">
+            <a class="portfolio-link" href="">
               <img class="portfolio-img" src="./images/Img-potyfolio/img-9-2.jpg" alt="фото додатку" width="370" />
               <div class="frame">
                 <h2 class="portfolio-title">Growing Business</h2>
